added app-level page background styling

--- a/src/pages/education/education.scss
+++ b/src/pages/education/education.scss
@@ -1,3 +1,15 @@
 page-education {
+  .description {
+    text-align: justify;
+  }
+
+  .job-dates p {
+  }
+
+  .leader {
+    background-color: rgba(255, 255, 255, 1);
+    padding: 25px;
+    margin-bottom: 25px;
+  }
 
 }
