--- a/src/pages/resume/resume.scss
+++ b/src/pages/resume/resume.scss
@@ -1,3 +1,24 @@
 page-forum {
 
 }
+
+.card-title-block {
+  margin-left: 2px;
+  margin-right: 2px;
+  border-bottom: 1px solid #ddd;
+}
+.wordpress {
+  text-align: justify;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.wp p {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  color: green;
+}
+
+.wp h3 {
+  font-weight: bolder;
+  text-align: center;
+}
