--- a/src/pages/certification-detail/certification-detail.scss
+++ b/src/pages/certification-detail/certification-detail.scss
@@ -1,3 +1,15 @@
 page-certification-detail {
+  .form-label {
+    margin-top: 10px;
+  }
+  .editable-field {
+    color: green;
+    font-weight: bolder;
+    margin-bottom: 5px;
+  }
 
-}
+  .description {
+    min-height: 100px;
+  }
+
+  }
