--- a/src/pages/certifications/certifications.scss
+++ b/src/pages/certifications/certifications.scss
@@ -1,3 +1,30 @@
 page-certifications {
+  .card-title-block {
+    margin-left: 2px;
+    margin-right: 2px;
+    border-bottom: 1px solid #ddd;
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
+  }
+
+  .institution {
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bolder;
+  }
+  .description {
+    text-align: justify;
+  }
+
+  .job-dates p {
+  }
+  
+  .leader {
+    background-color: rgba(255, 255, 255, 1);
+    padding: 25px;
+    margin-bottom: 25px;
+  }
+
 
 }
