--- a/src/pages/news/news.scss
+++ b/src/pages/news/news.scss
@@ -1,3 +1,29 @@
 page-news {
+  .card-title-block {
+    margin-left: 2px;
+    margin-right: 2px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  p.publish-date {
+    color: gray;
+    font-style: italic;
+  }
+
+  .wordpress {
+    text-align: justify;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .wp p {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: green;
+  }
+
+  .wp h3 {
+    font-weight: bolder;
+    text-align: center;
+  }
 
 }
