signup form validations. more Cognito integration

--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -21,6 +21,13 @@ page-signup {
     text-align: center;
   }
 
+  .info-message {
+    color: #555 !important;
+    font-style: italic;
+    font-size: 1em;
+    text-align: center;
+  }
+
    p {
        font-size: 0.8em;
        color: #d2d2d2;
