wired up forgot password screen

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,17 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.logo {
+  display: block;
+  margin-top: 25%;
+  padding: 20px 0px 0px 0px;
+
+  img {
+    max-width: 150px;
+  }
+}
+
+
 .app-background {
   background: #f1f1f1; /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(left top, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("/assets/background-image.jpg") center repeat; /* For Safari 5.1 to 6.0 */
