--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,10 +1,16 @@
 page-login {
-  .logo {
-    padding: 20px 0px 0px 0px;
-    text-align: center;
 
-    img {
-      max-width: 150px;
-    }
+  .right {
+    float: right;
   }
+
+  .links {
+    margin-top: 25px;
+  }
+
+  p.error-message {
+    text-align: center;
+    color: red;
+  }
+
 }
