--- a/src/pages/http-error/http-error.scss
+++ b/src/pages/http-error/http-error.scss
@@ -1,3 +1,18 @@
 page-http-error {
 
+  .error-message {
+    margin-top: 20%;
+  }
+
+  .error-message button {
+    margin-top: 20%;
+  }
+
+  .button-bottom {
+    position: absolute;
+    bottom: 15px;
+    left: 5%;
+    width: 90%;
+  }
+
 }
