--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,7 +16,8 @@
 // automatically applied to the <body> element in the app.
 .logo {
   display: block;
-  margin-top: 25%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   padding: 20px 0px 0px 0px;
 
   img {
