cleaned up verification form validation behavior

--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -37,6 +37,10 @@ page-signup {
        margin-bottom: 5px;
    }
 
+   ion-list {
+     margin-top: 25px !important;
+   }
+
    .valid {
     color: green;
    }
