--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,15 +1,11 @@
 page-welcome {
 
   .welcome-logo {
-    display: block;
-    padding-left: 30%;
-    padding-right: 30%;
-    margin-top: 5%;
-    margin-bottom: 5%;
 
     img {
-      max-width: 150px;
-    }
+      width: 150px;
+      margin: auto;
+      display: block;    }
   }
 
   ion-card-content {
