--- a/src/pages/jobs/jobs.scss
+++ b/src/pages/jobs/jobs.scss
@@ -1,24 +1,7 @@
 page-jobs {
-    .card-title-block {
-      margin-left: 2px;
-      margin-right: 2px;
-      border-bottom: 1px solid #ddd;
-    }
-    .wordpress {
-      text-align: justify;
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-    .wp p {
-      margin-top: 25px;
-      margin-bottom: 25px;
-      color: green;
-    }
 
-    .wp h3 {
-      font-weight: bolder;
-      text-align: center;
-    }
-
+ion-list {
+  margin-bottom: 20px !important;
+}
 
 }
