--- a/src/pages/jobs-detail/jobs-detail.scss
+++ b/src/pages/jobs-detail/jobs-detail.scss
@@ -1,3 +1,33 @@
 page-jobs-detail {
+  h2 {
+    font-size: .9em !important;
+  }
 
+  p.publication-date {
+    margin-top: 10px;
+    font-size: .8em;
+    font-style: italic;
+  }
+
+  ion-card {
+    margin: 0 !important;
+    width: 100% !important;
+  }
+
+  ion-card-content {
+    padding: 0 !important;
+  }
+
+  p.post {
+    margin-top: 10px;
+    text-align: justify;
+  }
+
+  ul {
+    padding-left: 20px !important;
+  }
+
+  li {
+    padding: 5px !important;
+  }
 }
