--- a/src/pages/terms-of-use/terms-of-use.scss
+++ b/src/pages/terms-of-use/terms-of-use.scss
@@ -1,3 +1,10 @@
 page-terms-of-use {
+  ion-card {
+    margin: 0 !important;
+    width: 100% !important;
+  }
 
+  ion-card-content {
+    padding: 0 !important;
+  }
 }
