--- a/src/pages/privacy-policy/privacy-policy.scss
+++ b/src/pages/privacy-policy/privacy-policy.scss
@@ -1,3 +1,11 @@
 page-privacy-policy {
+  ion-card {
+    margin: 0 !important;
+    width: 100% !important;
+  }
+
+  ion-card-content {
+    padding: 0 !important;
+  }
 
 }
