--- a/src/pages/privacy-policy/privacy-policy.scss
+++ b/src/pages/privacy-policy/privacy-policy.scss
@@ -8,4 +8,65 @@ page-privacy-policy {
     padding: 0 !important;
   }
 
+  p.disclaimer {
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 10px;
+    color: brown;
+  }
+
+  h2 {
+    color: #333 !important;
+    font-weight: bolder !important;
+    margin-bottom: 20px !important;
+    margin-top: 20px !important;
+    text-align: center;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    background-color: #f1f1f1 !important;
+  }
+
+  h3 {
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
+    font-style: oblique;
+    font-weight: bolder !important;
+    color: #333 !important;
+  }
+
+  h3 {
+    & + p
+    {
+        margin-left: 5px !important;
+    }
+  }
+
+  h4 {
+    margin-top: 20px !important;
+    text-align: center !important;
+    border-bottom: 1px solid gray;
+    font-size: 1.25em !important;
+    padding-bottom: 5px !important;
+  }
+
+  .contact {
+    margin-top: 20px;
+    color: #333 !important;
+    background-color: #f1f1f1;
+    padding: 5px;
+
+    p {
+      margin: 5px;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+  }
+
+  address {
+    margin-left: 10px;
+    padding-bottom: 10px;
+  }
+
 }
