--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -7,6 +7,11 @@ page-welcome {
       margin: auto;
       display: block;    }
   }
+  ion-card {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
   ion-card-content {
 
@@ -16,7 +21,9 @@ page-welcome {
   }
 
   .right-arrow {
-      float:right;
+      position: relative;
+      margin-top: 85px !important;
+      float: right;
       width: 125px;
   }
 
