login form validations

--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -5,7 +5,10 @@ page-welcome {
     img {
       width: 150px;
       margin: auto;
-      display: block;    }
+      display: block;
+      margin-top: 25px;
+      margin-bottom: 25px;
+    }
   }
   ion-card {
     position: absolute;
@@ -21,10 +24,9 @@ page-welcome {
   }
 
   .right-arrow {
-      position: relative;
-      margin-top: 85px !important;
       float: right;
       width: 125px;
+      margin-bottom: 25px;
   }
 
   .left-arrow {
