the code is spic ´n span

--- a/src/pages/resume-uploader/resume-uploader.scss
+++ b/src/pages/resume-uploader/resume-uploader.scss
@@ -1,3 +1,12 @@
 page-resume-uploader {
 
+  .resume {
+    height: 100vh;
+    width: 100%;
+
+    margin: auto;
+    margin-top: 35px;
+  }
+
+
 }
