--- a/src/pages/resume-uploader/resume-uploader.scss
+++ b/src/pages/resume-uploader/resume-uploader.scss
@@ -8,5 +8,10 @@ page-resume-uploader {
     margin-top: 35px;
   }
 
+.thank-you {
+    margin-top: 16px;
+    font-weight: bolder;
+    font-size: 24px;
+  }
 
 }
